Add new project food

--- a/index.html
+++ b/index.html
@@ -1,17 +1,43 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <title>Trần Đại Quang</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css
+">
         <link rel="stylesheet" href="css/site.css" />
     </head>
     <body>
-       <h1>
-           Trường Đại Học Khoa Học Huế
-       </h1>
-       <p>
-         t1
-       </p>
-       
+        <div class="header">
+            <div class="header-top">
+                <h1>TRƯỜNG ĐẠI HỌC KHOA HỌC HUẾ</h1>
+            </div>
+            <div class="header-content">
+                <h1>Trần Đại Quang</h1>
+                <p>Công nghệ thông tin K45I</p>
+            </div>
+            <div class="avatar">
+                <img src="images/avt.JPG" alt="">
+            </div>
+        </div>
+        <div class="menu">
+            <div class="menu-content">
+                <div class="menu-item-1">
+                    <img src="images/a.png" alt="">
+                    <p>Thông tin cá nhân</p>
+                </div>
+                <div class="menu-item-2">
+                    <img src="images/d.png" alt="">
+                    <p>Kết quả học tập</p>
+                </div>
+                <div class="menu-item-3">
+                    <img src="images/c.png" alt="">
+                    <p>Sản phẩm của cá nhân</p>
+                </div>
+                <div class="menu-item-4">
+                    <img src="images/b.png" alt="">
+                    <p>Thư viện ảnh</p>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
